--- a/IoCBuilder/IoCBuilder.csproj
+++ b/IoCBuilder/IoCBuilder.csproj
@@ -21,4 +21,7 @@
     <Folder Include="Location\" />
     <Folder Include="Policies\" />
   </ItemGroup>
+  <ItemGroup>
+    <None Remove="XMLFile1.xml" />
+  </ItemGroup>
 </Project>
